force-app/main/default/objects/ManagePermissions__mdt/ManagePermissions__mdt.object-meta.xml
<CustomObject>
    <label>ManagePermissions</label>
    <pluralLabel>ManagePermissions</pluralLabel>
</CustomObject>