force-app/main/default/objects/ManagePermissions__mdt/fields/apiversion__c.field-meta.xml
<CustomField>
    <fullName>apiversion__c</fullName>
    <label>api version</label>
    <length>5</length>
    <type>Text</type>
</CustomField>