force-app/main/default/objects/ManagePermissions__mdt/fields/Community_URL__c.field-meta.xml
<CustomField>
    <fullName>Community_URL__c</fullName>
    <label>Community URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>