force-app/main/default/objects/ManagePermissions__mdt/fields/Hide_Fields__c.field-meta.xml
<CustomField>
    <fullName>Hide_Fields__c</fullName>
    <inlineHelpText>Hide Fields are not visible on UI</inlineHelpText>
    <label>Hide Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>