force-app/main/default/objects/ManagePermissions__mdt/fields/Hide_Objects__c.field-meta.xml
<CustomField>
    <fullName>Hide_Objects__c</fullName>
    <inlineHelpText>Hide Object are not display on UI</inlineHelpText>
    <label>Hide Objects</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>