force-app/main/default/objects/ManagePermissions__mdt/fields/Hide_Permissions__c.field-meta.xml
<CustomField>
    <fullName>Hide_Permissions__c</fullName>
    <inlineHelpText>Hide Permissions will hide Profiles and PermissionSet on UI</inlineHelpText>
    <label>Hide Permissions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>